# md2vid

./: .gitignore  package-lock.json  package.json
src/: App.jsx
src-tauri/: .taurignore  Cargo.toml  sentence2.ass  tauri.conf.json
src-tauri/output/: audio.webm
src-tauri/src/: ffmpeg_operations.rs  file_utils.rs  image_resolution.rs  log_utils.rs  main.rs  text_processing.rs  video_gen.rs  yt_downloader.rs  yt_downloader_old.rs
src/components/: Overlay.jsx  Settings.jsx  TextFormattingComponent.jsx
src/hooks/: useEventListeners.js  useFileContentLoader.js  useFileLoader.js  useFormatDate.js  useVideoLoader.js
