[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = ["window-all"] }
dotenv = "0.15.0"
video-rs = { version = "0.8", features = ["ndarray"] }
ndarray = "0.15"
image = "0.25.1"
rusttype = "0.9.3"
youtube_dl = { version = "0.10.0", features = ["tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
rayon = "1.10.0"
regex = "1.10.4"
urlencoding = "2.1.3"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
